# blogs_quarto

./: README.md  _quarto.yml  index.qmd  pyproject.toml
docs/: about.html  index.html  index.xml  listings.json  search.json  sitemap.xml
docs/posts/Blog-Post-1/: index.html
docs/posts/Blog-Post-2/: index.html
docs/posts/post-with-code/: index.html
docs/posts/welcome/: index.html
posts/Blog-Post-1/: index.qmd
posts/Blog-Post-2/: index.qmd
